# www

./: .gitignore  .prettierignore  Cargo.toml
site/content/: index.dj  style.css
site/content/blog/: 2025-10-01-mem-optimizing-art.dj  index.dj
site/content/favicon/: site.webmanifest
site/content/projects/: blart.dj  index.dj  wahgex.html  walox.dj
site/templates/: base.html  page.html
site/templates/blog/: page.html
site/templates/projects/: index.html  page.html
src/: build.rs  main.rs
